Update and remove dependencies + refactor code + clean code